# agency

./: .editorconfig  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  COMMIT.txt  Cargo.toml  LICENSE.md  README.md  dist-workspace.toml  justfile  opencode.json  prd.md  pre-prd.md
.agency/: setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release-please.yml  release.yml  semantic-release.yml  version.yml
.opencode/agent/: api-docs-expert.md  test-fixer.md
.opencode/command/: commit-fast.md  commit.md  implement-plan.md  save-plan.md  update-plan.md
apps/agency/: Cargo.toml
apps/orchestra/: Cargo.toml
crates/agency/: CHANGELOG.md  Cargo.toml
crates/agency/defaults/: agency.template.toml  agency.toml
crates/agency/src/: config.rs  daemon.rs  daemon_protocol.rs  lib.rs  main.rs
crates/agency/src/commands/: attach.rs  bootstrap.rs  branch.rs  complete.rs  config.rs  daemon.rs  defaults.rs  edit.rs  exec.rs  fzf.rs  gc.rs  info.rs  init.rs  merge.rs  mod.rs  new.rs  open.rs  operations.rs  path.rs  ps.rs  reset.rs  rm.rs  sessions.rs  setup.rs  shell.rs  start.rs  stop.rs  tasks.rs
crates/agency/src/commands/attach/: overlay.rs
crates/agency/src/commands/files/: add.rs  edit.rs  fzf.rs  list.rs  mod.rs  open.rs  path.rs  rm.rs
crates/agency/src/commands/skill/: install.rs  mod.rs
crates/agency/src/pty/: client.rs  config.rs  daemon.rs  idle.rs  mod.rs  protocol.rs  registry.rs  session.rs  transcript.rs
crates/agency/src/pty/client/: tty.rs
crates/agency/src/pty/session/: dsr.rs
crates/agency/src/texts/: setup.rs
crates/agency/src/tui/: app.rs  colors.rs  command_log.rs  confirm_dialog.rs  file_input_overlay.rs  files_overlay.rs  help_bar.rs  input_overlay.rs  layout.rs  mod.rs  select_menu.rs  task_input_overlay.rs  task_table.rs  text_input.rs
crates/agency/src/utils/: bootstrap.rs  child.rs  clipboard.rs  cmd.rs  command.rs  context.rs  daemon.rs  editor.rs  error_messages.rs  files.rs  fzf.rs  git.rs  interactive.rs  keybindings.rs  log.rs  mod.rs  opener.rs  session.rs  sessions.rs  shell.rs  status.rs  task.rs  task_columns.rs  term.rs  tmux.rs  tty.rs  version.rs  which.rs  wizard.rs
crates/agency/src/utils/git/: branch.rs  command.rs  mod.rs  query.rs  repo.rs  worktree.rs
crates/agency/src/utils/task/: cleanup.rs  content.rs  metadata.rs  mod.rs  paths.rs  resolution.rs  slug.rs
crates/agency/src/utils/tmux/: common.rs  config.rs  mod.rs  pane.rs  server.rs  session.rs
crates/agency/tests/: cli.rs  cli_attach.rs  cli_bootstrap.rs  cli_complete.rs  cli_daemon.rs  cli_defaults.rs  cli_edit_reset.rs  cli_exec.rs  cli_fzf.rs  cli_gc.rs  cli_help.rs  cli_info.rs  cli_init.rs  cli_merge.rs  cli_new.rs  cli_open.rs  cli_path_branch.rs  cli_rm.rs  cli_sessions.rs  cli_setup.rs  cli_shell.rs  cli_skill.rs  cli_start.rs  cli_stop.rs  cli_tasks.rs  cli_tui.rs  config.rs  error_paths.rs  pty_attach.rs  pty_attach_with_task.rs  pty_daemon_cli.rs  pty_helpers.rs  pty_shell_exit.rs  pty_slow_client.rs
crates/agency/tests/common/: agency.rs  git.rs  mod.rs  test_env.rs  tmux.rs
crates/agency/tests/pty_helpers/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  event_reader.rs  lib.rs  stdin_handler.rs  term_reset.rs
crates/cli/src/commands/: attach.rs  daemon.rs  init.rs  mod.rs  new.rs  path.rs  shell_hook.rs  start.rs  status.rs
crates/cli/src/rpc/: client.rs
crates/cli/src/util/: base_branch.rs  daemon_proc.rs  detach_keys.rs  editor.rs  errors.rs  mod.rs  task_ref.rs
crates/cli/tests/: attach_detach_cases.rs  attach_e2e.rs  attach_fast_input.rs  attach_no_replay.rs  attach_resets_terminal.rs  autostart.rs  daemon_restart.rs  daemon_running.rs  friendly_errors.rs  init_scaffold.rs  new.rs  new_auto_attach.rs  snapshot_cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/adapters/: fs.rs  git.rs  mod.rs  pty.rs
crates/core/src/adapters/pty/: constants.rs  input_encode.rs  registry.rs  sanitize.rs  session.rs  spawn.rs
crates/core/src/agent/: mod.rs  runner.rs
crates/core/src/config/: defaults.rs  load.rs  mod.rs  paths.rs  types.rs  validate.rs  write.rs
crates/core/src/daemon/: mod.rs  resume.rs  server.rs  task_index.rs
crates/core/src/daemon/api/: daemon.rs  mod.rs  pty.rs  tasks.rs
crates/core/src/domain/: task.rs
crates/core/src/logging/: mod.rs
crates/core/src/rpc/: mod.rs
crates/core/tests/: daemon_e2e.rs  daemon_resume.rs  git_worktrees.rs  pty.rs  tasks.rs
crates/mcp/: Cargo.toml
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
docs/adr/: ADR-1-mvp.md  ADR-2-plan-format.md
docs/guides/: RUST_BEST_PRACTICES.md
docs/notes/: 2025-11-15_feedback.md
docs/plans/: PLAN-1-orchestra-mvp.md  PLN-1-agency-mvp.md  PLN-1-bootstrap-agency-cli.md  PLN-1-orchestra-mvp.md  PLN-10-agent-integration-opencode-editor-auto-attach-env.md  PLN-10-bootstrap-git-ignored-files.md  PLN-11-merge-back-and-open-worktree.md  PLN-11-unified-agent-spawn-stopped-status-modular-pty.md  PLN-12-refactor-config-daemon-agent-pty.md  PLN-12-tui-event-driven.md  PLN-13-lazy-worktrees-stopped-status-ps-tui.md  PLN-13-refactor-structure-cli-daemon-config.md  PLN-14-stateless-reset-crokey-detach-sanitize-replay.md  PLN-14-tui-command-log-snappy.md  PLN-15-crokey-refactoring.md  PLN-15-tui-cli-parity-keymap.md  PLN-16-tui-sink-interactive-switch.md  PLN-17-setup-wizard-and-support-commands.md  PLN-18-idle-detection.md  PLN-19-command-log-focus.md  PLN-19-notify-after-task-change.md  PLN-2-agency-new-command-config-anstream.md  PLN-2-phase-10-pty-completion.md  PLN-20-cursor-dsr-response.md  PLN-21-slug-handling-empty-editor.md  PLN-22-full-scrollback-on-attach.md  PLN-23-agency-root-env.md  PLN-24-tmux-sessions-slim-daemon.md  PLN-25-autostart-daemon.md  PLN-26-non-interactive-new-no-attach.md  PLN-27-unified-project-state-uncommitted-commits.md  PLN-28-agent-shell-wrapper-cross-shell.md  PLN-3-stdin-handler-modularization.md  PLN-3-worktrees-and-cli-commands.md  PLN-4-agency-ps-command-and-table.md  (+11 more)
openspec/: project.md
scripts/: fake_agent.py
(+44 files in other folders)
