[workspace]
members = ["crates/agency"]
resolver = "2"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2
debug = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
unused_extern_crates = "warn"
