[package]
name = "agency"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "0.6.21"
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
git2 = "0.20.2"
owo-colors = "4.2.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
xdg = "3.0.0"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
expectrl = "0.8.0"
predicates = "3.1.3"
temp-env = "0.3.6"
tempfile = "3.23.0"
