[package]
name = "agency"
version = "1.7.0"
edition = "2024"
repository = "https://github.com/tobias-walle/agency"
homepage = "https://github.com/tobias-walle/agency"
description = "AI Agent Orchestrator in the terminal"

[dependencies]
anstream = "0.6.21"
anyhow = "1.0.100"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29"
ratatui = "0.28.1"
env_logger = "0.11.8"
gix = { version = "0.74.1", default-features = false }
log = "0.4.28"
owo-colors = "4.2.3"
reflink-copy = "0.1.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shell-words = "1.1.0"
toml = "0.9.8"
xdg = "3.0.0"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
anstyle-parse = "0.2"
anstyle = "1.0"
inquire = "0.9.1"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
fs_extra = "1.3.0"
predicates = "3.1.3"
serial_test = "3.2.0"
temp-env = "0.3.6"
tempfile = "3.23.0"
