[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
crossterm = "0.29.0"
git2 = "0.20.2"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = "0.1.16"
hyperlocal = "0.9.1"
orchestra-core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "net", "rt"], default-features = false }
yansi = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0.17"
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
