[package]
name = "orchestra-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "server", "http1"] }
hyper-util = "0.1.16"
hyperlocal = "0.9.1"
jsonrpsee = { version = "0.26.0", features = ["server"] }
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "json", "serde"] }

[dev-dependencies]
proptest = "1.7.0"
serde_json = "1.0.143"
tempfile = "3.21.0"
