[package]
name = "test-support"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20.2"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = "0.1.16"
hyperlocal = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
tokio = { version = "1.47.1", default-features = false, features = ["time"] }
